k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  labels:
    app: backend-api

spec:
  type: ClusterIP

  selector:
    app: backend-api

  ports:
    - port: 80
      targetPort: 8080
