k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-api-ingress

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  rules:

    - http:

        paths:

          - path: /api

            pathType: Prefix

            backend:

              service:

                name: backend-api-service

                port:

                  number: 80
